--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "chalk": "^3.0.0",
+    "figlet": "^1.3.0",
+    "inquirer": "^6.3.1",
+    "inquirer-recursive": "0.0.6"
   },
   "devDependencies": {
     "jest": "^24.8.0"
