--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "figlet": "^1.3.0",
-    "inquirer": "^6.3.1",
-    "inquirer-recursive": "0.0.6"
+    "inquirer": "^6.3.1"
   },
   "devDependencies": {
     "jest": "^24.8.0"
